# Hamlyn2021

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/hamlyn2021/: Unet_v2.py  __init__.py
src/hamlyn2021/data_processing/: __init__.py  data_scraping.py
src/hamlyn2021/data_reader/: __init__.py  data_reader.py  pytorch_data_reader.py
src/hamlyn2021/slam/: README.md  display.py  main.py  normalize.py
src/hamlyn2021/train/: test.py  train.py
src/hamlyn2021/unet/: Unet_v2.py
src/hamlyn2021/visualisation/: __init__.py  visualisation.py
