[metadata]
name = hamlyn2021
description = Mini project for Hamlyn Winter School on Surgical Imaging and Vision (2021)
author = Joshua Moo, George Kamaras, Nina Montana Brown, Joeran Bosma
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    hamlyn2021
install_requires =
    numpy
    tqdm
    SimpleITK
    scipy
    opencv-python
    matplotlib
    torch
    torchvision
    wget

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
hamlyn2021 = py.typed

[flake8]
max-line-length = 160